--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,7 +5,7 @@ body {
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f8f9fa; /* Light background for the overall app */
+  background-color: #f8f9fa;
 }
 
 code {
